# hackceler8-2024-public

./: .gitignore  README-en.md  README.md  apply-patch.sh  mod.py  requirements.txt  server_modded.py
cheats-rust/: .gitignore  Cargo.toml  README.md  build.sh  search_settings.json
cheats-rust/rround/: Cargo.toml
cheats-rust/rround/src/: lib.rs
cheats-rust/search/: Cargo.toml  pyproject.toml
cheats-rust/search/src/: astar.rs  dodge.rs  encoding.rs  env_modifier.rs  geometry.rs  hitbox.rs  lib.rs  main.rs  moves.rs  objects.rs  physics.rs  player.rs  polygon.rs  settings.rs  static_state.rs
data/: .default_remap  .gitignore
data/keyremaps/: wasd_to_arrow.json
game/engine/shaders/: shapelayer_f.glsl
kijitora/: config.py  drawutils.py  gameutils.py  keyhistory.py  keys.py  kstate.py  macros.py  path_finding_cbs.py  predict.py
kijitora/inject/: __init__.py  arcade_system.py  camera.py  flags.py  player.py  textbox.py  venator.py
kijitora/webserver/: main.py
kijitora/webserver/template/: index.html  objview.html
